# graphmine

./: .gitignore  README.md  pyproject.toml
docs/: methodology.md
skills/graphmine/: SKILL.md
src/graphmine/: __init__.py  analyze.py  cli.py  correct.py  mcp_server.py  mine.py  postprocess.py  query.py  report.py  store.py
src/graphmine/adapters/: __init__.py  graphify.py
src/graphmine/encoders/: __init__.py  base.py  git_cochange.py  graph_coref.py
tests/: test_adapter_graphify.py  test_analyze.py  test_encoders.py  test_mcp.py  test_postprocess.py  test_query.py  test_store.py
