[project]
name = "graphmine"
version = "0.1.0"
description = "Mine statistically significant relations from code repositories and knowledge graphs (powered by Kingfisher)."
readme = "README.md"
requires-python = ">=3.10"
# Kingfisher (Fisher's-exact dependency-rule mining) is the engine. It is not on
# PyPI yet, so it is wired as a local path source below; swap to a git/PyPI
# dependency once it is published.
dependencies = ["kingfisher-bnb"]

[project.optional-dependencies]
# Adapter for plugging results into graphify (reads its graph.json, emits
# graphify-compatible edges/report). Kept optional so graphmine stands alone.
graphify = []

[project.scripts]
graphmine = "graphmine.cli:main"

[tool.uv.sources]
# Local build of the user's Rust Kingfisher (sibling checkout). Maturin builds it.
kingfisher-bnb = { path = "../BranchAndBound/kingfisher" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphmine"]
