[project]
name = "graphmine"
version = "0.1.0"
description = "Mine statistically significant relations from code repositories and knowledge graphs (powered by Kingfisher)."
readme = "README.md"
requires-python = ">=3.10"
# Kingfisher (Fisher's-exact dependency-rule mining) is the engine, published as
# the `kingfisher-bnb` wheel on PyPI (Rust core, prebuilt — no toolchain needed).
dependencies = ["kingfisher-bnb>=0.1", "networkx>=3"]

[project.optional-dependencies]
# Adapter for plugging results into graphify (reads its graph.json, emits
# graphify-compatible edges/report). Kept optional so graphmine stands alone.
graphify = []

[project.scripts]
graphmine = "graphmine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphmine"]
